codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_hardcoded_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
assertion_line: 190
expression: value
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
› [x] Use theme colors      Apply colors from the active /theme
  ───────────────────────
  [x] project-name          Project name (omitted when unavailable)
  [x] git-branch            Current Git branch (omitted when unavailable)
  [x] thread-title          Current thread title, or thread identifier when unnamed
  [ ] Cutex Notification    Cutex notification priority (Alt+N to cycle)
  [ ] model                 Current model name
  [ ] model-with-reasoning  Current model name with reasoning level

  my-project · feat/awesome-feature · thread title
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to close
