codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
assertion_line: 401
expression: value
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
› [x] Use theme colors      Apply colors from the active /theme
  ───────────────────────
  [x] monthly-limit         Remaining usage on the monthly usage limit (omitted when unavailable)
  [x] weekly-limit          Remaining usage on the weekly usage limit (omitted when unavailable)
  [ ] Cutex Notification    Cutex notification priority (Alt+N to cycle)
  [ ] model                 Current model name
  [ ] model-with-reasoning  Current model name with reasoning level
  [ ] reasoning             Current reasoning level

  monthly 65% left · weekly 50% left
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to close
